[gd_scene load_steps=15 format=2]

[ext_resource path="res://gdscripts/single_stage.gd" type="Script" id=1]
[ext_resource path="res://scenes/booster2.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/booster.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/grid.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/bfs3.tscn" type="PackedScene" id=5]
[ext_resource path="res://images/smoke_04.png" type="Texture" id=6]
[ext_resource path="res://scenes/bfs6.tscn" type="PackedScene" id=7]
[ext_resource path="res://sounds/engine_start.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/engine_cutoff2.wav" type="AudioStream" id=9]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0

[sub_resource type="CapsuleShape" id=2]
radius = 7.0
height = 110.0

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 0.5
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = -10.0
angular_velocity = 1.47136e-43
color = Color( 1, 1, 1, 0 )

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
params_blend_mode = 1
params_cull_mode = 2
albedo_color = Color( 1, 1, 1, 0.0823529 )
albedo_texture = ExtResource( 6 )

[sub_resource type="PlaneMesh" id=5]
material = SubResource( 4 )
size = Vector2( 1, 1 )

[node name="BFR" type="Spatial"]
script = ExtResource( 1 )

[node name="rigid" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50.446, 0 )
mass = 2.0
physics_material_override = SubResource( 1 )
sleeping = true
angular_damp = 128.0

[node name="CollisionShape" type="CollisionShape" parent="rigid"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 9.439, 0 )
shape = SubResource( 2 )

[node name="rigid_cg" type="Spatial" parent="rigid"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -19.414, 0 )

[node name="booster2" parent="rigid/rigid_cg" instance=ExtResource( 2 )]
transform = Transform( -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, -1e-06, -31, 0 )
visible = false

[node name="booster" parent="rigid/rigid_cg" instance=ExtResource( 3 )]
transform = Transform( 8.9407e-08, -1.39626e-07, 1, 1.50996e-07, -1, -1.39626e-07, 1, 1.50996e-07, -8.9407e-08, -2.71011e-06, -31, -1.13687e-13 )

[node name="grid0" parent="rigid/rigid_cg" instance=ExtResource( 4 )]
transform = Transform( 0.707107, -0.707107, -3.09086e-08, 0, -4.37114e-08, 1, -0.707107, -0.707107, -3.09086e-08, 0, 35.5, 0 )

[node name="grid1" parent="rigid/rigid_cg" instance=ExtResource( 4 )]
transform = Transform( -0.707107, 0.707107, 3.09086e-08, 0, -4.37114e-08, 1, 0.707107, 0.707107, 3.09086e-08, 0, 35.5, 0 )

[node name="grid2" parent="rigid/rigid_cg" instance=ExtResource( 4 )]
transform = Transform( 0.707107, 0.707107, 3.09086e-08, 0, -4.37114e-08, 1, 0.707107, -0.707107, -3.09086e-08, 0, 35.5, 0 )

[node name="grid3" parent="rigid/rigid_cg" instance=ExtResource( 4 )]
transform = Transform( -0.766044, -0.642788, -2.80971e-08, 0, -4.37114e-08, 1, -0.642788, 0.766044, 3.34849e-08, 0, 35.5, 0 )

[node name="ship3" parent="rigid/rigid_cg" instance=ExtResource( 5 )]
transform = Transform( -8.9407e-08, 0, -1, 0, 1, 0, 1, 0, -8.9407e-08, 0, 37, 0 )
visible = false

[node name="smoke" type="Particles" parent="rigid/rigid_cg"]
transform = Transform( 14.1421, -14.1421, -6.18172e-07, 0, -8.74228e-07, 20, -14.1421, -14.1421, -6.18172e-07, -2.65855e-07, -89.6254, -1.46451e-07 )
emitting = false
amount = 128
randomness = 1.0
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 5 )

[node name="ship" parent="rigid/rigid_cg" instance=ExtResource( 7 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 37, 0 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.999651, -0.0264267, 0, 0.0264267, 0.999651, 0, -1.51442, 8.75369 )
visible = false

[node name="audio1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="engineCutoff" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -6.0
